[package]
name = "challenge20230611"
version = "0.1.0"
edition = "2021"
description="A short Rust app to print numbers from a range <START> to <STOP> in a random sequence."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
